add_subdirectory(lib/adder)
add_subdirectory(lib/design_patterns)
add_subdirectory(lib/leetcode)
add_subdirectory(bin/basic)
add_subdirectory(bin/basic_gui)
add_subdirectory(bin/concepts)
add_subdirectory(bin/design_patterns)
add_subdirectory(bin/leetcode)
add_subdirectory(bin/server)
add_subdirectory(bin/client)
add_subdirectory(bin/containers)
add_subdirectory(bin/c_11)
